Fixed z-index issues & spacing b/w sections

--- a/style.css
+++ b/style.css
@@ -14,10 +14,12 @@ header {
     background: linear-gradient(35deg, #FFFFFF, #000000);
     justify-content: space-between;
     box-shadow: 2px 2px 5px;
+    z-index: 2;
+  
   
 }
 #header-img{
-    width: 180px;
+    width: 120px;
     height: auto;
     border-radius: 80%;
     margin: 0;
@@ -26,10 +28,16 @@ header #nav-bar {
   display: flex;
   flex-direction: row;
   align-items: center;
+  font-family: 'Raleway', sans-serif;
+}
+a:hover {
+  transform: scale(1.1);
+  transition: 300ms ease-out;
+  transform: skewX(-10deg);
 }
 header .nav-link {
   margin-right: 25px;
-  font-size: 26px;
+  font-size: 24px;
   text-decoration: none;
   color: white;
 }
@@ -37,7 +45,8 @@ a:hover {
   color: orange;
 }
 #features {
-  margin-top: 350px;
+  margin-top: 170px;
+  padding-top: 100px;
   display: flex;
   justify-content: center;
   
@@ -55,7 +64,8 @@ a:hover {
   align-self: space-evenly;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin-top: 420px;
+  margin-top: 170px;
+  padding-top: 100px;
   margin-bottom: 420px;
   
   
@@ -248,7 +258,7 @@ a:hover {
   width: 30%;
   text-align: center;
   padding-bottom: 40px;
-  color: white;
+  
   
 }
 #submit {
